add thumbnails ok i guess it was a good idea after all

--- a/index.html
+++ b/index.html
@@ -41,103 +41,103 @@
 							<section class="thumbnails">
 								<div>
 									<a href="images/fulls/01.png">
-										<img src="images/fulls/01.png" alt="" />
+										<img src="images/compressed/01.png" alt="" />
 										<h3>do not go where the gradient may lead</h3>
 									</a>
 									<a href="images/fulls/2x1.png">
-										<img src="images/fulls/2x1.png" alt="" />
+										<img src="images/compressed/2x1.png" alt="" />
 										<h3>you made all other checkpoints irrelevant</h3>
 									</a>
 									<a href="images/fulls/3x1.png">
-										<img src="images/fulls/3x1.png" alt="" />
+										<img src="images/compressed/3x1.png" alt="" />
 										<h3>convergence is not final</h3>
 									</a>
 									<a href="images/fulls/4x1.png">
-										<img src="images/fulls/4x1.png" alt="" />
+										<img src="images/compressed/4x1.png" alt="" />
 										<h3>your compute is limited</h3>
 									</a>
 									<a href="images/fulls/5x1.png">
-										<img src="images/fulls/5x1.png" alt="" />
+										<img src="images/compressed/5x1.png" alt="" />
 										<h3>— marilyn model</h3>
 									</a>
 									<a href="images/fulls/6x1.png">
-										<img src="images/fulls/6x1.png" alt="" />
+										<img src="images/compressed/6x1.png" alt="" />
 										<h3>the future belongs to those</h3>
 									</a>
 									<a href="images/fulls/7x1.png">
-										<img src="images/fulls/7x1.png" alt="" />
+										<img src="images/compressed/7x1.png" alt="" />
 										<h3>the local minima you find along the way</h3>
 									</a>
 									<a href="images/fulls/8x1.png">
-										<img src="images/fulls/8x1.png" alt="" />
+										<img src="images/compressed/8x1.png" alt="" />
 										<h3>distributional shift is what happens when</h3>
 									</a>
 								</div>
 								<div>
 									<a href="images/fulls/05.png">
-										<img src="images/fulls/05.png" alt="" />
+										<img src="images/compressed/05.png" alt="" />
 										<h3>make the epochs count</h3>
 									</a>
 									<a href="images/fulls/04.png">
-										<img src="images/fulls/04.png" alt="" />
+										<img src="images/compressed/04.png" alt="" />
 										<h3>the journey of a thousand epochs</h3>
 									</a>
 									<a href="images/fulls/03.png">
-										<img src="images/fulls/03.png" alt="" />
+										<img src="images/compressed/03.png" alt="" />
 										<h3>the epochs which take our breath away</h3>
 									</a>
 									<a href="images/fulls/4x2.png">
-										<img src="images/fulls/4x2.png" alt="" />
+										<img src="images/compressed/4x2.png" alt="" />
 										<h3>the friends you ensemble with</h3>
 									</a>
 									<a href="images/fulls/5x2.png">
-										<img src="images/fulls/5x2.png" alt="" />
+										<img src="images/compressed/5x2.png" alt="" />
 										<h3>model convergence: now and forever <3</h3>
 									</a>
 									<a href="images/fulls/6x2.png">
-										<img src="images/fulls/6x2.png" alt="" />
+										<img src="images/compressed/6x2.png" alt="" />
 										<h3>live for the epochs you'll never remember</h3>
 									</a>
 									<a href="images/fulls/7x2.png">
-										<img src="images/fulls/7x2.png" alt="" />
+										<img src="images/compressed/7x2.png" alt="" />
 										<h3>falling in love (gradient descent)</h3>
 									</a>
 									<a href="images/fulls/8x2.png">
-										<img src="images/fulls/8x2.png" alt="" />
+										<img src="images/compressed/8x2.png" alt="" />
 										<h3>better to have converged and diverged</h3>
 									</a>
 								</div>
 								<div>
 									<a href="images/fulls/06.png">
-										<img src="images/fulls/06.png" alt="" />
+										<img src="images/compressed/06.png" alt="" />
 										<h3>i fell into the minima slowly</h3>
 									</a>
 									<a href="images/fulls/07.png">
-										<img src="images/fulls/07.png" alt="" />
+										<img src="images/compressed/07.png" alt="" />
 										<h3>the cross-entropy we think we deserve</h3>
 									</a>
 									<a href="images/fulls/3x3.png">
-										<img src="images/fulls/3x3.png" alt="" />
+										<img src="images/compressed/3x3.png" alt="" />
 										<h3>bigger batch sizes y'all</h3>
 									</a>
 									<a href="images/fulls/4x3.png">
-										<img src="images/fulls/4x3.png" alt="" />
+										<img src="images/compressed/4x3.png" alt="" />
 										<h3>you could mean the model</h3>
 									</a>
 									<a href="images/fulls/5x3.png">
-										<img src="images/fulls/5x3.png" alt="" />
+										<img src="images/compressed/5x3.png" alt="" />
 										<h3>convergence, then, is a habit</h3>
 									</a>
 									<a href="images/fulls/6x3.png">
-										<img src="images/fulls/6x3.png" alt="" />
+										<img src="images/compressed/6x3.png" alt="" />
 										<h3>create your own global minima</h3>
 									</a>
 									<a href="images/fulls/7x3.png">
-										<img src="images/fulls/7x3.png" alt="" />
+										<img src="images/compressed/7x3.png" alt="" />
 										<h3>live your truth</h3>
 									</a>
 									<a href="images/fulls/8x3.png">
-										<img src="images/fulls/8x3.png" alt="" />
+										<img src="images/compressed/8x3.png" alt="" />
 										<h3>live laugh love train eval inspire</h3>
 									</a>
 								</div>
