--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 									</a>
 									<a href="images/fulls/2x1.png">
 										<img src="images/compressed/2x1.png" alt="" />
-										<h3>you made all other checkpoints irrelevant</h3>
+										<h3>first love, last love</h3>
 									</a>
 									<a href="images/fulls/3x1.png">
 										<img src="images/compressed/3x1.png" alt="" />
@@ -70,7 +70,7 @@
 									</a>
 									<a href="images/fulls/8x1.png">
 										<img src="images/compressed/8x1.png" alt="" />
-										<h3>distributional shift is what happens when</h3>
+										<h3>the fear of distributional shift</h3>
 									</a>
 								</div>
 								<div>
@@ -92,11 +92,11 @@
 									</a>
 									<a href="images/fulls/5x2.png">
 										<img src="images/compressed/5x2.png" alt="" />
-										<h3>model convergence: now and forever <3</h3>
+										<h3>model convergence: now and forever</h3>
 									</a>
 									<a href="images/fulls/6x2.png">
 										<img src="images/compressed/6x2.png" alt="" />
-										<h3>live for the epochs you'll never remember</h3>
+										<h3>the epochs you'll never remember</h3>
 									</a>
 									<a href="images/fulls/7x2.png">
 										<img src="images/compressed/7x2.png" alt="" />
@@ -138,7 +138,7 @@
 									</a>
 									<a href="images/fulls/8x3.png">
 										<img src="images/compressed/8x3.png" alt="" />
-										<h3>live laugh love train eval inspire</h3>
+										<h3>live laugh love, train eval inspire</h3>
 									</a>
 								</div>
 							</section>
