--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>All rights reserved. Design: <a href="http://templated.co">TEMPLATED</a>. Demo Images: <a href="http://unsplash.com">Unsplash</a>.</p>
+						<p>All rights reserved. Design: <a href="http://templated.co">TEMPLATED</a>.</p>
 					</footer>
 
 			</div>
